Change jvm options (increase memory for cljsbuild/figwheel)